<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/background">
	<LinearLayout
		android:id="@+id/head"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true">
		<include
			layout="@layout/head" />
	</LinearLayout>
	<RelativeLayout
		android:id="@+id/RelativeLayout01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="40dip">
		<TextView
			android:id="@+id/UserName"
			android:textColor="@color/black"
			android:layout_marginLeft="25dip"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/UserName"
			android:layout_alignParentTop="true"></TextView>
		<EditText
			android:id="@+id/UserNameEditText"
			android:layout_marginRight="25dip"
			android:layout_marginLeft="25dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:layout_width="fill_parent"
			android:background="@drawable/bg_input_panel"
			android:layout_below="@+id/UserName"
			android:singleLine="true"></EditText>
		<TextView
			android:textColor="@color/black"
			android:layout_marginLeft="25dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:layout_width="wrap_content"
			android:text="@string/Password"
			android:id="@+id/Password"
			android:layout_below="@+id/UserNameEditText"></TextView>
		<EditText
			android:id="@+id/PasswordEditText"
			android:layout_marginRight="25dip"
			android:layout_marginLeft="25dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:layout_width="fill_parent"
			android:background="@drawable/bg_input_panel"
			android:password="true"
			android:layout_below="@+id/Password"
			android:singleLine="true"></EditText>
		<CheckBox
			android:layout_width="wrap_content"
			android:id="@+id/automaticlogin"
			android:layout_below="@+id/PasswordEditText"
			android:layout_alignRight="@+id/PasswordEditText"
			android:text="@string/automaticlogin"
			android:textColor="@color/black"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:checked="true"
			android:button="@drawable/btn_check"></CheckBox>
		<Button
			android:text="@string/loginin"
			android:gravity="center"
			android:layout_marginRight="10dip"
			android:id="@+id/LoginButton"
			android:layout_marginTop="15dip"
			android:layout_below="@+id/automaticlogin"
			android:layout_alignRight="@+id/automaticlogin"
			android:layout_height="35dip"
			android:layout_width="80dip"
			android:background="@drawable/buttonbackground"></Button>
		<CheckBox
			android:layout_width="wrap_content"
			android:id="@+id/rememberpassword"
			android:layout_below="@+id/PasswordEditText"
			android:layout_alignLeft="@+id/PasswordEditText"
			android:text="@string/rememberpassword"
			android:textColor="@color/black"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:button="@drawable/btn_check"></CheckBox>
		<TextView
			android:id="@+id/copyright"
			android:layout_alignParentBottom="true"
			android:layout_height="wrap_content"
			android:text="@string/copyright"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_marginBottom="30dip"></TextView>
	</RelativeLayout>

</LinearLayout>
