<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background">
	<LinearLayout
		android:id="@+id/head"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true">
		<include
			layout="@layout/headwithbutton"></include>
	</LinearLayout>
	<RelativeLayout
		android:id="@+id/boardarea"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/head"
		android:drawingCacheQuality="high"
		android:visibility="gone">
		<TextView
			android:id="@+id/selectboard"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:gravity="center"
			android:textColor="@color/topictitle"
			android:layout_alignParentTop="true"
			android:text="@string/selectborad"></TextView>
		<AutoCompleteTextView
			android:background="@drawable/bg_input_panel"
			android:dropDownVerticalOffset="5dip"
			android:singleLine="true"
			android:layout_height="wrap_content"
			android:textColor="@color/topictitle"
			android:id="@+id/boads"
			android:layout_marginLeft="5dip"
			android:dropDownWidth="fill_parent"
			android:dropDownSelector="@drawable/list_select"
			android:layout_marginTop="5dip"
			android:layout_marginRight="5dip"
			android:hint="@string/inputhint"
			android:layout_below="@+id/selectboard"
			android:layout_alignLeft="@+id/selectboard"
			android:layout_width="wrap_content" android:imeOptions="actionDone"></AutoCompleteTextView>
		<Button
			android:id="@+id/gotoboard"
			android:text="Go"
			android:layout_height="35dip"
			android:background="@drawable/buttonbackground"
			android:layout_marginRight="5dip"
			android:layout_toRightOf="@+id/boads"
			android:layout_alignTop="@+id/boads"
			android:layout_alignBottom="@+id/boads"
			android:layout_width="60dip"></Button>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/progresslayout"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/boardarea"
		android:visibility="gone">
		<ProgressBar
			android:id="@+id/progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:indeterminateDrawable="@drawable/progress">
		</ProgressBar>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progresstext"
			android:layout_toRightOf="@+id/progress"
			android:layout_alignTop="@+id/progress"
			android:layout_alignBottom="@+id/progress"
			android:gravity="center_vertical"
			android:text="@string/loading"></TextView>
	</RelativeLayout>
	<ListView
		android:id="@+id/postlist"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:cacheColorHint="#00000000"
		android:divider="@color/list_background"
		android:alwaysDrawnWithCache="true"
		android:dividerHeight="1dip"
		android:layout_below="@+id/progresslayout"
		android:layout_above="@+id/foot">
	</ListView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:id="@+id/foot">
		<include
			layout="@layout/foottopic" />
	</LinearLayout>
</RelativeLayout>
